[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "spy-ast"
version = "0.1.0"
description = "Static Python AST parser for a modified Python dialect with match as an expression."
readme = "README_vlang_match.md"
requires-python = ">=3.11"
authors = [{ name = "spy-ast contributors" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests_vlang_parser"]
